--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.google.firebase:firebase-core:17.2.1'
 
+    //circular image
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+
 
 }
 apply plugin: 'com.google.gms.google-services'
