--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.google.firebase:firebase-core:17.2.1'
-    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
+    //firebase ui database
+    implementation 'com.firebaseui:firebase-ui-database:6.1.0'
     //circular image
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
