--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -40,7 +39,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions:19.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.google.firebase:firebase-core:17.2.1'
-    implementation 'com.virgilsecurity:ethree:0.6.1-beta1'
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     //firebase ui database
     implementation 'com.firebaseui:firebase-ui-database:6.1.0'
