--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    implementation 'androidx.work:work-runtime:2.2.0'
 
+    // Needed implementations
+    implementation 'androidx.work:work-runtime:2.2.0'
+    implementation 'com.google.api-client:google-api-client:1.30.2'
 }
 apply plugin: 'com.google.gms.google-services'
